# CropGuard-AI---Crop-Disease-Prediction-System

./: CropGuard_AI.py  README.md  cg.py  cg2.py  cg3.py  class_info.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
