[project]
name = "crop-disease-prediction-project"
version = "0.1.0"
description = ""
authors = [
    {name = "sammy-love123",email = "ogemarv4@gmail.com"}
]
readme = "README.md"
requires-python = "\">=3.9,<3.12\""
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
